fixed name in package.json

--- a/utils/protobufs/package.json
+++ b/utils/protobufs/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "tera-ui-remaster",
+  "name": "tera-client-settings",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
